(library
 (name tsdl_ttf)
 (public_name tsdl-ttf)
 (modules tsdl_ttf build_config)
 (private_modules build_config)
 (libraries tsdl)
 (c_library_flags
  (:include c_library_flags.sexp)))

(rule
 (targets c_flags.sexp c_library_flags.sexp)
 (action
  (run ../config/discover.exe)))

(rule
 (target build_config.ml)
 (action
  (with-stdout-to
   %{target}
   (echo "let system = \"%{system}\""))))
